<resources>
    <string name="app_name">manbis_eventco</string>
    <string name="edittext_hint_username"><font size="10"></font>Username</string>
    <string name="edittext_hint_password"><font size="10"></font>Password</string>
    <string name="Login_btn"><font size="8"></font> Login</string>
    <string name="Login_txt"><u>Log in</u></string>
    <string name="Wedding_Occasion">Wedding Occasion</string>
    <string name="Music_Concert">Music Concert</string>
    <string name="Birthday_Party">Birthday Party</string>
    <string name="Talk_Show">Talk Show</string>

    <string-array name="vendorList">
        <item>Venue</item>
        <item>Catering</item>
        <item>Decoration and Lighting</item>
        <item>Invitation Card</item>
        <item>Photography and Videography</item>
        <item>Attire and Dress</item>
        <item>Hair and Makeup</item>
        <item>Photobooth</item>
        <item>Entertainment</item>
    </string-array>
    
    <string-array name="Transfer">
        <item>Select Bank</item>
        <item>Mandiri</item>
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
    </string-array>

    <string-array name="CreditCard">
        <item>Select CreditCard</item>
        <item>Jenius</item>
        <item>PayPal</item>
        <item>Flazz</item>
        <item>Visa</item>
    </string-array>

    <string-array name="ATM">
        <item>Select ATM</item>
        <item>Mandiri</item>
        <item>BCA</item>
        <item>BNI</item>
        <item>BRI</item>
    </string-array>
    
    <string-array name="Cashier">
        <item>Select Cashier</item>
        <item>Indomaret</item>
        <item>Alfamaret</item>
    </string-array>

</resources>
