<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/backgroundLogin1"
    android:orientation="vertical"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:paddingTop="100dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Make your Dream Event Come True"
            android:textSize="10dp"
            android:letterSpacing="0.2"/>
        <TextView
            android:paddingTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="50dp"
            android:textStyle="bold"
            android:text="Event.co"
            android:textColor="@color/colorPrimary"
            android:paddingBottom="80dp"
            android:fontFamily="@font/opensansextraboldd"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/background">
        <View
            android:id="@+id/strut"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_wedding"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignRight="@+id/strut"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/Wedding_Occasion"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_concert"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/strut"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/Music_Concert"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/row1"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/background">
        <View
            android:id="@+id/strut1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_birthday"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignRight="@+id/strut1"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:text="@string/Birthday_Party"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_talkshow"
            style="@style/AppTheme.Button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_alignLeft="@+id/strut1"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/Talk_Show"/>

    </RelativeLayout>
</RelativeLayout>